--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>Radowan Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="helf-width">
+            <h1>Welcome to</h1>
+            <h1><span class="red-color">Radowan Rimon</span> website...!</h1>
+            <h3> A web developer & student</h3>
+            <p>Write something about myself Write something about myselfWrite something about myselfWrite something
+                about myselfWrite something about myselfWrite something about myselfWrite something about myselfWrite
+                something about myselfWrite something about myself</p>
+            <a class="link-button" target="_blank" href="https://www.programming-hero.com/">Hair me</a>
+        </div>
+        <div class="helf-width">
+            <img src=" online-eidit/my-bg2.png">
+        </div>
+
+
+
+
 </body>
+
 </html>
