--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
         <div class="helf-width">
             <img src=" online-eidit/my-bg2.png">
         </div>
+    </section>
+    <section class="dream-big">
+        <div class="helf-width">
+            <img src="online-eidit/121.png" alt="">
+        </div>
+        <div class="helf-width">
+            <h1>dream-big</h1>
+            <h3>Become a web developer</h3>
+            <p>Elon Musk, (born June 28, 1971, Pretoria, South Africa), South African-born American entrepreneur who
+                cofounded the electronic-payment firm PayPal and formed SpaceX, maker of launch vehicles and spacecraft.
+                He was also one of the first significant investors in, as well as chief executive officer of, the
+                electric car manufacturer Tesla.</p>
+            <a class="link-button" target="_blank" href="https://www.programming-hero.com/">DOWNLOD</a>
+        </div>
+
+    </section>
 
 
 
