footer and experience added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="helf-width">
             <h1>Welcome to</h1>
             <h1><span class="red-color">Radowan Rimon</span> website...!</h1>
@@ -28,7 +28,7 @@
             <img src=" online-eidit/my-bg2.png">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="helf-width">
             <img src="online-eidit/121.png" alt="">
         </div>
@@ -40,6 +40,30 @@
                 He was also one of the first significant investors in, as well as chief executive officer of, the
                 electric car manufacturer Tesla.</p>
             <a class="link-button" target="_blank" href="https://www.programming-hero.com/">DOWNLOD</a>
+        </div>
+
+    </section>
+    <section class="experiences-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="experience-item">
+                <h1>Full stack developer</h1>
+                <h3>2022-Present to Pro Levek Developer</h3>
+                <p>Elon Musk, (born June 28, 1971, Pretoria, South Africa), South African-born American entrepreneur who
+                    cofounded the electronic-payment firm PayPal and formed SpaceX, maker of launch vehicles and
+                    spacecraft.
+                    He was also one of the first significant investors in, as well as chief executive officer of, the
+                    electric car manufacturer Tesla</p>
+            </div>
+            <div class="experience-item">
+                <h1>Baby web Developer</h1>
+                <h3>2022 will Become a pro developer</h3>
+                <p>Elon Musk, (born June 28, 1971, Pretoria, South Africa), South African-born American entrepreneur who
+                    cofounded the electronic-payment firm PayPal and formed SpaceX, maker of launch vehicles and
+                    spacecraft.
+                    He was also one of the first significant investors in, as well as chief executive officer of, the
+                    electric car manufacturer Tesla</p>
+            </div>
         </div>
 
     </section>
