--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
         <div class="helf-width">
             <h1>Welcome to</h1>
             <h1><span class="red-color">Radowan Rimon</span> website...!</h1>
-            <h3> A web developer & student</h3>
-            <p>Write something about myself Write something about myselfWrite something about myselfWrite something
-                about myselfWrite something about myselfWrite something about myselfWrite something about myselfWrite
-                something about myselfWrite something about myself</p>
-            <a class="link-button" target="_blank" href="https://www.programming-hero.com/">Hair me</a>
+            <h3> A web developer & Student</h3>
+            <p>Hyy.....Thank you very much for reading my website info and I am much honored to
+                introduce myself here.My name is Radowan Rimon. I'm from
+                Narayanganj. I am the first child of my parents and I have an little sister. We have a small family
+                where my mother & sis. We love each other much. My father is a government employee of <a class="army"
+                    href="https://www.army.mil.bd/">Bangladesh army</a> All family members are open-minded and friendly.
+                <br>
+                <br>
+
+                <a class="link-button" target="_blank" href="https://www.facebook.com/radowan.ahammad10/">Facebook
+                    Account</a>
         </div>
         <div class="helf-width">
             <img src=" online-eidit/my-bg2.png">
@@ -33,13 +39,14 @@
             <img src="online-eidit/121.png" alt="">
         </div>
         <div class="helf-width">
-            <h1>dream-big</h1>
+            <h1>Dream-big</h1>
             <h3>Become a web developer</h3>
-            <p>Elon Musk, (born June 28, 1971, Pretoria, South Africa), South African-born American entrepreneur who
-                cofounded the electronic-payment firm PayPal and formed SpaceX, maker of launch vehicles and spacecraft.
-                He was also one of the first significant investors in, as well as chief executive officer of, the
-                electric car manufacturer Tesla.</p>
-            <a class="link-button" target="_blank" href="https://www.programming-hero.com/">DOWNLOD</a>
+            <p>As a young child, my dream occupation was to dig up dinosaurs. As I grew older and my interests changed,
+                my dream profession changed also. Although most of these dreams were not very long lived, one
+                occupational dream has outlasted all others, and has finally emerged as the dream I passionately pursue.
+                My dream come true.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.instagram.com/radowan_rimon/">Instagram</a>
         </div>
 
     </section>
@@ -47,27 +54,23 @@
         <h1>Experiences</h1>
         <div class="flexible-container">
             <div class="experience-item">
-                <h1>Full stack developer</h1>
-                <h3>2022-Present to Pro Levek Developer</h3>
-                <p>Elon Musk, (born June 28, 1971, Pretoria, South Africa), South African-born American entrepreneur who
-                    cofounded the electronic-payment firm PayPal and formed SpaceX, maker of launch vehicles and
-                    spacecraft.
-                    He was also one of the first significant investors in, as well as chief executive officer of, the
-                    electric car manufacturer Tesla</p>
+                <h1>For motivation</h1>
+                <h3> Winston S. Churchill </h3>
+                <p>"Success is not final; failure is not fatal: It is the courage to continue that counts."</p>
             </div>
             <div class="experience-item">
-                <h1>Baby web Developer</h1>
+                <h1>Industry of Web Development</h1>
                 <h3>2022 will Become a pro developer</h3>
-                <p>Elon Musk, (born June 28, 1971, Pretoria, South Africa), South African-born American entrepreneur who
-                    cofounded the electronic-payment firm PayPal and formed SpaceX, maker of launch vehicles and
-                    spacecraft.
-                    He was also one of the first significant investors in, as well as chief executive officer of, the
-                    electric car manufacturer Tesla</p>
+                <h5>Web development is the work involved in developing a Web site for the Internet World Wide Web or an
+                    intranet a private network. Web development can range from developing a simple single static
+                    page of plain text to complex web applications, electronic businesses, and social network services.
+                    A more comprehensive list of tasks to which Web development commonly refers Web design, Web content
+                    development, client liaison,
+                    Web server and network security configuration, and e-commerce development.</h5>
             </div>
         </div>
 
     </section>
-
 
 
 
